--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,15 @@
 body {
-  background-color: #9a43eb;
-  
+  background-color: #7dc738;
+  text-align: center;
+  font-style: oblique;
 }
 
+.oblique {
+  font-style: oblique;
+  font-weight: 500;
+}
+
+.showRates {
+  font-weight: 800;
+  font-size: large;
+}
